# ChangeLog for net-libs/libksnmp
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libksnmp/Attic/ChangeLog,v 1.2 2005/05/08 09:43:39 greg_g Exp $

  08 May 2005; Gregorio Guidi <greg_g@gentoo.org> libksnmp-0.3.ebuild:
  Correct dependencies.

*libksnmp-0.3 (22 Apr 2005)

  22 Apr 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +libksnmp-0.3.ebuild:
  Initial version, libksnmp is a snmp library for kde (actually an
  encapsulation of net-snmp) and is needed for 3.0 versions of knetload. Im
  the author and Ill be the maintainer here.
