@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/knetload/Attic/knetload-3.0_alpha2.ebuild,v 1.4 2005/05/27 16:36:40 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/knetload/Attic/knetload-3.0_alpha2.ebuild,v 1.5 2005/12/10 13:30:42 flameeyes Exp $
 
 inherit kde
 
@@ -8,7 +8,7 @@ inherit kde
 MY_P="${PN}-2.9.92"
 
 DESCRIPTION="Network Load Monitor applet for Kicker with SNMP capabilities"
-HOMEPAGE="http://dev.gentoo.org/~flameeyes/kdeapps.xhtml#knetload"
+HOMEPAGE="http://dev.gentoo.org/~flameeyes/kdeapps#knetload"
 SRC_URI="http://digilander.libero.it/dgp85/files/${MY_P}.tar.bz2"
 LICENSE="GPL-2"
 
