@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libksnmp
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libksnmp/Attic/ChangeLog,v 1.2 2005/05/08 09:43:39 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libksnmp/Attic/ChangeLog,v 1.3 2005/12/10 13:27:47 flameeyes Exp $
+
+  10 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> libksnmp-0.3.ebuild:
+  Update $HOMEPAGE value, as the .xhtml version does not exists anymore.
 
   08 May 2005; Gregorio Guidi <greg_g@gentoo.org> libksnmp-0.3.ebuild:
   Correct dependencies.
